--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <tr>
         <td>
           <img
-            src="C:\Users\User\Desktop\Web Development\HTML - Personal Site\HTML Personal Site\HTML - Personal site\Images\DSC_0002_3-modified.png"
+            src="DSC_0002_3-modified.png"
             alt="Kevin Rodriguez Picture"
           />
         </td>
@@ -83,7 +83,7 @@
     <br />
     <a href="contact me.html">Contact Me</a>
     <br>
-    <a href="input.html">Inputs</a>
+    
 
     <script src="" async defer></script>
     
