--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           />
         </td>
         <td>
-          <h1>Weronika Rodriguez</h1>
+          <h1>Kevin Rodriguez</h1>
           <p>
             <em
               >Web Developer<strong
