--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <tr>
         <td>
           <img
-            src="DSC_0002_3-modified.png"
+            src="images/kevin.png"
             alt="Kevin Rodriguez Picture"
           />
         </td>
