--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="" />
+<link rel="stylesheet" href="css/styles.css">
+ 
+
   </head>
   <body>
     <table cellspacing="20">
@@ -22,7 +25,7 @@
           <h1>Kevin Rodriguez</h1>
           <p>
             <em
-              >Web Developer<strong
+              > A Web Developer<strong
                 ><a
                   href="https://www.udemy.com/course/the-complete-web-development-bootcamp/"
                   >Learner</a
@@ -34,7 +37,7 @@
         </td>
       </tr>
     </table>
-    <hr size="3" noshade />
+    <hr size="3"  />
     <h3>Education and Books</h3>
     <ul>
       <li>
@@ -70,7 +73,7 @@
     <table cellspacing="10">
       <tr>
         <td>Html</td>
-        <td>⭐⭐⭐</td>
+        <td>⭐⭐⭐⭐⭐</td>
       </tr>
       <tr>
         <td>CSS</td>
@@ -78,13 +81,13 @@
       </tr>
     </table>
 
-    <hr size="3" noshade="" />
+    <hr size="3"  />
     <a href="hobbies.html">My Hobbies</a>
     <br />
     <a href="contact me.html">Contact Me</a>
     <br>
-    
-
+   
+   
     <script src="" async defer></script>
     
   </body>
