--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <h1>Kevin Rodriguez</h1>
           <p>
             <em
-              > A Web Developer<strong
+              >  Web Developer<strong
                 ><a
                   href="https://www.udemy.com/course/the-complete-web-development-bootcamp/"
                   >Learner</a
