--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="" />
-<link rel="stylesheet" href="css/styles.css">
+<link rel="stylesheet" href="CV/css/styles.css">
+
  
 
   </head>
